# moosync-extensions-sdk

./: .gitignore  Cargo.toml  README.md  index.html  schema.json  update_docs.sh
common-types/: Cargo.toml
common-types/src/: lib.rs
wasm-extension/: Cargo.toml
wasm-extension-rs/: Cargo.toml
wasm-extension-rs/docs/wasm32-wasip1/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
wasm-extension-rs/docs/wasm32-wasip1/doc/moosync_edk/: all.html  enum.ExtensionCommand.html  enum.ExtensionCommandResponse.html  enum.ExtensionExtraEvent.html  enum.ExtensionExtraEventResponse.html  enum.ExtensionProviderScope.html  enum.MainCommand.html  enum.MainCommandResponse.html  enum.MoosyncError.html  enum.PlayerState.html  enum.RunnerCommand.html  enum.RunnerCommandResp.html  enum.SongType.html  fn.entry.html  fn.get_accounts_wrapper.html  fn.get_album_songs_wrapper.html  fn.get_artist_songs_wrapper.html  fn.get_lyrics_wrapper.html  fn.get_playback_details_wrapper.html  fn.get_playlist_content_wrapper.html  fn.get_playlist_context_menu_wrapper.html  fn.get_playlist_from_url_wrapper.html  fn.get_playlists_wrapper.html  fn.get_provider_scopes_wrapper.html  fn.get_recommendations_wrapper.html  fn.get_song_context_menu_wrapper.html  fn.get_song_from_id_wrapper.html  fn.get_song_from_url_wrapper.html  fn.handle_custom_request_wrapper.html  fn.oauth_callback_wrapper.html  fn.on_context_menu_action_wrapper.html  fn.on_player_state_changed_wrapper.html  fn.on_playlist_added_wrapper.html  fn.on_playlist_removed_wrapper.html  fn.on_preferences_changed_wrapper.html  fn.on_queue_changed_wrapper.html  fn.on_seeked_wrapper.html  fn.on_song_added_wrapper.html  fn.on_song_changed_wrapper.html  fn.on_song_removed_wrapper.html  (+62 more)
wasm-extension-rs/docs/wasm32-wasip1/doc/moosync_edk/api/: index.html  sidebar-items.js  trait.Accounts.html  trait.ContextMenu.html  trait.DatabaseEvents.html  trait.Extension.html  trait.PlayerEvents.html  trait.PreferenceEvents.html  trait.Provider.html
wasm-extension-rs/docs/wasm32-wasip1/doc/moosync_edk/api/extension_api/: fn.add_playlist.html  fn.add_songs.html  fn.add_to_playlist.html  fn.gen_hash.html  fn.get_current_song.html  fn.get_entity.html  fn.get_player_state.html  fn.get_preference.html  fn.get_queue.html  fn.get_secure.html  fn.get_song.html  (+15 more)
wasm-extension-rs/docs/wasm32-wasip1/doc/moosync_edk/config/: fn.get.html  fn.get_memory.html  index.html  sidebar-items.js
wasm-extension-rs/docs/wasm32-wasip1/doc/moosync_edk/handler/: fn.register_extension.html  index.html  sidebar-items.js
wasm-extension-rs/docs/wasm32-wasip1/doc/moosync_edk/http/: fn.request.html  index.html  sidebar-items.js  struct.HttpResponse.html
wasm-extension-rs/docs/wasm32-wasip1/doc/search.desc/moosync_edk/: moosync_edk-desc-0-.js
wasm-extension-rs/docs/wasm32-wasip1/doc/src/moosync_edk/: api.rs.html  handler.rs.html  lib.rs.html
wasm-extension-rs/src/: api.rs  handler.rs  lib.rs
wasm-extension/src/: api.rs  handler.rs  lib.rs
(+152 files in other folders)
