[package]
name = "wasm-extension-runner"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["common-types", "wasm-extension-rs"]

[dependencies]
extism = "1.9.1"
serde = { version = "1.0.216", features = ["derive"] }
common_types = { path = "common-types" }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
interprocess = { version = "2.2.2", features = ["tokio"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["v4"] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
