[package]
name = "common_types"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
types = { git = "https://github.com/Moosync/tauri", default-features = false, features = [
    "extensions",
] }
extism-convert = "1.5.0"
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v4"] }
tracing = "0.1.40"
