[package]
name = "moosync-edk"
version = "0.1.0"
edition = "2021"

[dependencies]
extism-pdk = "1.3.0"
lazy_static = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt", "time", "sync"] }
serde_json = "1.0.133"
wasm-bindgen-futures = "0.4.49"
tracing = "0.1.41"
types = { git = "https://github.com/Moosync/moosync-tauri", default-features = false, features = [
    "extensions",
] }
extism-convert = "1.9.1"
