[package]
name = "moosync-edk"
version = "0.1.0"
edition = "2021"

[dependencies]
extism-pdk = "1.2.1"
lazy_static = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt", "time", "sync"] }
common_types = { path = "../common-types" }
serde_json = "1.0.127"
wasm-bindgen-futures = "0.4.43"
tracing = "0.1.40"
